cargo-features = ["edition2021"]

[package]
name = "zynq-memflow"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/slack2450/zynq-memflow.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memflow = "0.2.0-beta9"
memflow-win32 = { git = "https://github.com/slack2450/memflow-win32", branch = "main" }
simplelog = "0.12.0"