[package]
name = "zynq-memflow"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/slack2450/zynq-memflow.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memflow = "0.2.0-beta9"
memflow-win32 = { version = "0.2.0-beta9" }
simplelog = "0.12.0"

[patch.crates-io]
memflow-win32 = { git = "https://github.com/slack2450/memflow-win32", branch = "0.2.0-beta9" }
